# SafeBricks

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  build_ori.sh  build_sgx.sh  build_sgx_dpdk.sh  build_sgx_examples.sh  config.sh  docker.mk  enable_sgx  enable_sgx.cpp  examples.sh  run_dpdk.sh  run_dpdkio.sh  run_enclave.sh  run_sgx.sh  setup.sh  setupBuild.sh  setupDpdk.sh  setupDpdkCopy.sh  setupHuge.sh
dpdkIO/: Cargo.toml
dpdkIO/src/: main.rs
examples/: config.sh  config_3core.toml  measure_heap.sh  measure_throughput.py  measure_throughput_sha.py  rm_logs.sh  run.sh  run_local.sh  run_local_heaptrack.sh  run_local_jemalloc.sh  run_local_valgrind.sh  run_measure_throughput.sh  run_real.sh  run_real_heaptrack.sh  run_real_jemalloc.sh  run_real_valgrind.sh  run_tmp.sh  tlb_cal.py
examples/acl-fw/: Cargo.toml  check.sh
examples/acl-fw-ipsec/: Cargo.toml
examples/acl-fw-ipsec-sha/: Cargo.toml  check.sh
examples/chain/: check.sh
examples/collect-metrics/: Cargo.toml  check.sh
examples/dpi/: Cargo.toml  raw.rules  rule-extract.py  rule_extract.py  word.rules
examples/dpi-hs/: Cargo.toml  check.sh
examples/dpi-ipsec/: Cargo.toml  rule-extract.py
examples/dpi-ipsec-sha/: Cargo.toml
examples/dpi/rules/: dpirules.rs  hs.rules  regex.rules  sentense.rules  word.rules
examples/dpi/src/: dpi.rs  main.rs
examples/dpi/wordrules/: dpirules.rs  word.rules
examples/echo-reply/: Cargo.toml
examples/embedded-scheduler/: Cargo.toml  check.sh
examples/embedded-scheduler-dependency/: Cargo.toml  check.sh
examples/heaptrack-log/: heaptrack.dpi.2962.gz.rule512
examples/ipv4or6/: Cargo.toml
examples/jemalloc-log/: log2tlb.py
examples/lpm/: Cargo.toml  check.sh
examples/lpm-ipsec/: Cargo.toml
examples/lpm-ipsec-sha/: Cargo.toml
examples/macswap/: Cargo.toml  run_heaptrack.sh  run_jemalloc.sh  run_macswap.sh  run_valgrind.sh
examples/macswap-ipsec/: Cargo.toml
examples/macswap-ipsec-sha/: Cargo.toml
examples/macswap/heaptrace/: heaptrack.macswap.1085.gz.16MB  heaptrack.macswap.9546.gz.8MB  massif.out.10041.8MB  massif.out.27632.16MB
examples/macswap/src/: main.rs
examples/maglev/: Cargo.toml  check.sh
examples/maglev-ipsec/: Cargo.toml
examples/maglev-ipsec-sha/: Cargo.toml
examples/monitoring/: Cargo.toml
examples/monitoring-ipsec/: Cargo.toml  check.sh
examples/monitoring-ipsec-sha/: Cargo.toml
examples/mtu-too-big/: Cargo.toml
examples/nat-tcp-v4/: Cargo.toml  check.sh
examples/nat-tcp-v4-ipsec/: Cargo.toml
examples/nat-tcp-v4-ipsec-sha/: Cargo.toml  check.sh
examples/op-errors/: Cargo.toml
examples/scripts/: throughput.py
examples/sctp/: Cargo.toml  check.sh
examples/signals/: Cargo.toml
examples/tcp-reconstruction/: Cargo.toml  check.sh
examples/throughput-eva/: throughput.txt_2019-07-25T01:56:38.396098  throughput.txt_2019-07-26T10:11:07.941336  throughput.txt_2019-07-31T23:14:15.627562  throughput.txt_2019-08-01T13:32:59.573394  throughput.txt_2019-08-03T09:01:10.923423  throughput.txt_2019-08-03T11:56:58.105300  throughput.txt_2019-08-03T14:13:35.892387  throughput.txt_2019-08-03T15:56:57.085720  throughput.txt_2019-08-03T16:22:30.677608  throughput.txt_2019-08-03T16:31:54.863579  throughput.txt_2019-08-03T16:52:57.059346  throughput.txt_2019-08-03T17:21:39.893030  throughput.txt_2019-08-03T17:33:18.184098  throughput.txt_2019-08-03T17:52:50.983540  throughput.txt_2019-08-03T17:57:36.345419  (+18 more)
framework/: Cargo.toml
framework-inside/: Cargo.toml
framework-inside/src/: lib.rs  runtime.rs
framework-inside/src/config/: mod.rs
framework-inside/src/heap_ring/: ring_buffer.rs
framework-inside/src/interface/port/: sim_port.rs
framework-inside/src/native/: mbuf.rs  mod.rs
framework-inside/src/native_include/: dpdk_bindings.rs  mod.rs
framework-inside/src/operators/: map_batch.rs  receive_batch.rs  send_batch.rs  sendall_batch.rs
framework-inside/src/packets/: buffer.rs  raw.rs
framework-inside/src/packets/icmp/v6/: mod.rs
framework-inside/src/packets/icmp/v6/ndp/: router_solicit.rs
framework-inside/src/packets/ip/v6/: srh.rs
framework-inside/src/scheduler/: context.rs  mod.rs  standalone_scheduler.rs
framework-inside/src/shared_ring/: ring_buffer.rs
framework-inside/src/utils/: asm.rs  ipsec.rs  mod.rs
framework-outside/: build.rs
framework/src/: lib.rs  runtime.rs
framework/src/config/: mod.rs
framework/src/interface/: mod.rs
framework/src/interface/port/: mod.rs  sim_port.rs
framework/src/native/: mbuf.rs  mod.rs
framework/src/operators/: mod.rs  queue_batch.rs  receive_batch.rs  send_batch.rs  sendall_batch.rs
framework/src/packets/: ethernet.rs  raw.rs  tcp.rs  udp.rs
framework/src/packets/icmp/v6/ndp/: router_advert.rs
framework/src/packets/icmp/v6/ndp/options/: mod.rs
framework/src/packets/ip/: v4.rs
framework/src/packets/ip/v6/: mod.rs
framework/src/scheduler/: mod.rs
framework/src/shared_ring/: mod.rs
framework/src/utils/: ipsec.rs  mod.rs
hyperscan-0.1.8/: .cargo_vcs_info.json  Cargo.toml
hyperscan-0.1.8/src/: api.rs  (+2 more)
hyperscan-sys-0.1.8/: .cargo_vcs_info.json  Cargo.toml
mbedtls-0.3.0/: .cargo_vcs_info.json  Cargo.toml
openssl-0.10.24/: .cargo_vcs_info.json
pktpuller/: Cargo.toml
runner/: Cargo.toml
runner/src/: lib.rs  main.rs
runner/src/packets/ip/: v4.rs
rust-sgx/examples/test-shared-ring/runner/: Cargo.toml
rust-sgx/examples/test-shared-ring/runner/src/: main.rs
rust-sgx/examples/test-shared-ring/runner/src/haproxy/: mod.rs
rust-sgx/examples/usercall-extension-bind-twoenclave/runner/: Cargo.toml
rust-sgx/examples/usercall-extension-bind-twoenclave/runner/src/: main.rs
rust-sgx/examples/usercall-extension/runner/: Cargo.toml
sgx-runner/: Cargo.toml  build.rs  config.toml  config_1core.toml  config_2core.toml  config_3core.toml  config_4core.toml  config_5core.toml  config_6core.toml
sgx-runner/src/: lib.rs  main.rs
sgx-runner/src/c/: hugepage_config.h  mapping  mapping.c  mem_config.h  run.sh
sgx-runner/src/config/: config.rs  mod.rs
sgx-runner/src/haproxy/: haproxy.rs  mod.rs
sharedring/: Cargo.toml
(+61 files in other folders)
