[workspace]
members = [
    "framework-inside",
    "framework-outside",
    # "examples/ttl-chain",
    # "examples/collect-metrics",
    # "examples/echo-reply",
    # "examples/embedded-scheduler",
    # "examples/embedded-scheduler-dependency",
    # "examples/ipv4or6",
    # "examples/mtu-too-big",
    # "examples/sctp",
    # 
    # does not work now
    # "examples/op-errors",
    # "examples/signals",
    # "examples/tcp-reconstruction",
    # 
    # for our experiments
    "examples/macswap",
    # "examples/acl-fw",
    # "examples/lpm",
    # "examples/maglev",
    # "examples/dpi",
    # "examples/nat-tcp-v4",
    # "examples/monitoring",
    # 
    # "examples/macswap-ipsec",
    # "examples/acl-fw-ipsec",
    # "examples/lpm-ipsec",
    # "examples/maglev-ipsec",
    # "examples/dpi-ipsec",
    # "examples/nat-tcp-v4-ipsec",
    # "examples/monitoring-ipsec",
    # for sgx 
    "sgx-runner",
]
exclude = ["rust-sgx"]

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true
debug-assertions = false
