[workspace]
members = [
    "framework-inside",
    "framework-outside",
    # "examples/ttl-chain",
    # "examples/collect-metrics",
    # "examples/echo-reply",
    # "examples/embedded-scheduler",
    # "examples/embedded-scheduler-dependency",
    # "examples/ipv4or6",
    # "examples/mtu-too-big",
    # "examples/sctp",
    # 
    # does not work now
    # "examples/op-errors",
    # "examples/signals",
    # "examples/tcp-reconstruction",
    # 
    # for our experiments
    "examples/macswap",
   	"examples/acl-fw",
   	"examples/lpm",
   	"examples/maglev",
   	"examples/dpi",
   	"examples/dpi-hs",
   	"examples/nat-tcp-v4",
   	"examples/monitoring",
    # 
    "examples/macswap-ipsec",
    "examples/acl-fw-ipsec",
    "examples/lpm-ipsec",
    "examples/maglev-ipsec",
    "examples/dpi-ipsec",
    "examples/nat-tcp-v4-ipsec",
    "examples/monitoring-ipsec",
    # 
    "examples/macswap-ipsec-sha",
    "examples/acl-fw-ipsec-sha",
    "examples/lpm-ipsec-sha",
    "examples/maglev-ipsec-sha",
    "examples/dpi-ipsec-sha",
    "examples/nat-tcp-v4-ipsec-sha",
    "examples/monitoring-ipsec-sha",
    # for sgx 
    "sgx-runner",
    "dpdkIO",
    "sharedring",
]
exclude = ["rust-sgx", "mbedtls-0.3.0"]

[profile.release]
opt-level = 3
lto = true
rpath = true
debug = true
debug-assertions = false
