[package]
name = "dpdkIO"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"

[dependencies]
pktpuller = {version = "0.3.0", path = "../framework-outside"}
byteorder = "1.0"
libc = "0.2"
core_affinity = "0.5.9"
lazy_static = ">= 1.3"
ctrlc = { version = "3.0", features = ["termination"] }
sharedring = { version = "0.1.0", path = "../sharedring" }