[package]
name = "runner"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
build = "build.rs"

[dependencies]
aesm-client = { version = "0.1.0", path = "../rust-sgx/aesm-client", features = ["sgxs"]}
enclave-runner = { version = "0.1.1", path = "../rust-sgx/enclave-runner"}
sgxs-loaders = { version = "0.1.0", path = "../rust-sgx/sgxs-loaders"}
byteorder = "1.0"
libc = "0.2"
core_affinity = "0.5.9"

clap = "2.33"
config = "0.9"
crossbeam = "0.6"
failure = "0.1"
fallible-iterator = "0.2"
fnv = ">= 1.0"
hex = "0.3"
lazy_static = ">= 1.3"
log = { version = "0.4", features = ["std", "serde"] }
net2 = "0.2"
# NIX restricts us to just unix for now, we can fix this if someone cares at a later point.
nix = ">= 0.13"
rayon = "1.0"
regex = ">= 1.1"
serde = ">= 1.0"
serde_derive = ">= 1.0"
tokio = "0.1"
tokio-signal = "0.2"
twox-hash = ">= 1.2"
# using openssl for crypto.
openssl-sys = "0.9"
openssl = "0.10"


[build-dependencies]
# Use Bindgen to generate DPDK structures.
bindgen = "0.49"